# semver

./: .gitignore  Makefile  README.md  default.nix  hie.yaml  semver.cabal
bench/: Main.hs
lib/Data/: SemVer.hs
lib/Data/SemVer/: Constraint.hs  Delimited.hs  Internal.hs  QQ.hs
src/Data/: SemVer.hs
src/Data/SemVer/: Constraint.hs  Delimited.hs  Internal.hs
test/: Main.hs
