name:                  semver
version:               0.1.0.0
synopsis:              Representation and manipulation of semantic versions
homepage:              https://github.com/brendanhay/semver
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            brendan.g.hay@gmail.com
copyright:             Copyright (c) 2013-2014 Brendan Hay
category:              Network, AWS, Cloud
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/semver.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:

    other-modules:

    build-depends:
          base                  == 4.7.*

test-suite tests
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded -with-rtsopts=-N

    build-depends:
          base
        , semver
