name:                  semver
version:               0.1.0.0
synopsis:              Representation and manipulation of semantic versions
homepage:              https://github.com/brendanhay/semver
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            brendan.g.hay@gmail.com
copyright:             Copyright (c) 2014 Brendan Hay
category:              Data
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/semver.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src
    ghc-options:       -Wall -O2 -funbox-strict-fields

    exposed-modules:
          Data.SemVer

    build-depends:
          attoparsec
        , base       == 4.7.*
        , deepseq
        , text

benchmark semver-bench
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    bench
    ghc-options:      -Wall -O2 -threaded -with-rtsopts=-T

    build-depends:
          base
        , criterion >= 1.0.0.2 && < 1.1
        , semver

test-suite semver-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs
    ghc-options:       -Wall -threaded

    build-depends:
          base
        , semver
        , tasty            >= 0.8
        , tasty-quickcheck >= 0.8
