cabal-version:      2.2
name:               semver
version:            0.4.0.1
synopsis:
  Representation, manipulation, and de/serialisation of Semantic Versions.

homepage:           https://github.com/brendanhay/semver
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay@gmail.com>
copyright:          Copyright (c) 2014-2019 Brendan Hay
category:           Data
build-type:         Simple
extra-source-files: README.md
description:
  Representation, manipulation, and de/serialisation of a Version type
  following the Semantic Versioning specification.
  .
  For more information see: <http://semver.org>

source-repository head
  type:     git
  location: git://github.com/brendanhay/semver.git

common base
  default-language: Haskell2010
  ghc-options:
    -Wall -funbox-strict-fields -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates

  build-depends:    base >=4.6 && <5
  autogen-modules:  Paths_semver
  other-modules:    Paths_semver

library
  import:          base
  hs-source-dirs:  lib
  exposed-modules:
    Data.SemVer
    Data.SemVer.Constraint
    Data.SemVer.Delimited

  other-modules:   Data.SemVer.Internal
  build-depends:
    , attoparsec  >=0.10
    , deepseq     >=1.1
    , hashable    >=1.1.1
    , text        >=0.11

benchmark semver-bench
  import:         base
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  ghc-options:    -O2 -threaded -with-rtsopts=-T
  build-depends:
    , criterion  >=1.0.0.2
    , semver
    , text

test-suite semver-test
  import:         base
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded
  build-depends:
    , semver
    , tasty        >=0.8
    , tasty-hunit  >=0.8
    , text
